<resources>
    <string name="app_name">tp3_basic_activity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sms">SMS</string>
    <string name="appels">Appels</string>
    <string name="Camera">Caméra</string>
    <string name="smsn">SMS Normal</string>
    <string name="smsu">SMS d\'Urgence</string>
    <string name="Quit">Quitter</string>
    <string name="apl_n">Appel Normal</string>
    <string name="apl_u">Apple d\'Urgence</string>

    <string name="num">5556</string>
    <string name="msg">message sent successfully</string>
</resources>